--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "equinox-app",
+  "name": "equinox",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~55.0.6",
+    "@react-navigation/bottom-tabs": "^7.15.2",
+    "@react-navigation/native": "^7.1.31",
+    "@react-navigation/native-stack": "^7.14.2",
+    "@supabase/supabase-js": "^2.98.0",
+    "@tanstack/react-query": "^5.90.21",
+    "axios": "^1.13.6",
+    "date-fns": "^4.1.0",
     "expo": "~55.0.4",
+    "expo-constants": "~55.0.7",
+    "expo-secure-store": "~55.0.8",
     "expo-status-bar": "~55.0.4",
+    "lucide-react-native": "^0.575.0",
+    "nativewind": "^4.2.2",
     "react": "19.2.0",
-    "react-native": "0.83.2"
+    "react-dom": "19.2.0",
+    "react-native": "0.83.2",
+    "react-native-reanimated": "4.2.1",
+    "react-native-svg": "15.15.3",
+    "react-native-web": "^0.21.0",
+    "tailwindcss": "^3.4.19",
+    "victory-native": "^41.20.2",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "~19.2.2",
