--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-   EXPO_PUBLIC_SUPABASE_URL=your_supabase_url
-   EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
-   EXPO_PUBLIC_VERCEL_API_URL=https://your-vercel-scraper-url
+EXPO_PUBLIC_SUPABASE_URL=https://awyfxnhcgpjxxqujltwx.supabase.co
+EXPO_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_qnzPKO_xxdbfT9huZ03D9w_f9ZQCRqX
+EXPO_PUBLIC_VERCEL_API_URL=https://equinox-scraper-api.vercel.app
