--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~55.0.6",
+    "@expo/metro-runtime": "~6.1.2",
     "@react-navigation/bottom-tabs": "^7.15.2",
     "@react-navigation/native": "^7.1.31",
     "@react-navigation/native-stack": "^7.14.2",
@@ -17,24 +17,28 @@
     "@tanstack/react-query": "^5.90.21",
     "axios": "^1.13.6",
     "date-fns": "^4.1.0",
-    "expo": "~55.0.4",
-    "expo-constants": "~55.0.7",
-    "expo-secure-store": "~55.0.8",
-    "expo-status-bar": "~55.0.4",
+    "expo": "~54.0.0",
+    "expo-constants": "~18.0.13",
+    "expo-secure-store": "~15.0.8",
+    "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.575.0",
     "nativewind": "^4.2.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-native": "0.83.2",
-    "react-native-reanimated": "4.2.1",
-    "react-native-svg": "15.15.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.2",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "tailwindcss": "^3.4.19",
     "victory-native": "^41.20.2",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@types/react": "~19.2.2",
+    "@types/react": "~19.1.10",
+    "babel-preset-expo": "~54.0.10",
     "typescript": "~5.9.2"
   },
   "private": true
