--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.2",
+    "@expo-google-fonts/playfair-display": "^0.4.2",
     "@expo/metro-runtime": "~6.1.2",
     "@react-navigation/bottom-tabs": "^7.15.2",
     "@react-navigation/native": "^7.1.31",
@@ -19,7 +21,10 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.0",
     "expo-constants": "~18.0.13",
+    "expo-font": "~14.0.11",
+    "expo-linear-gradient": "~15.0.8",
     "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.575.0",
     "nativewind": "^4.2.2",
