--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo-google-fonts/playfair-display": "^0.4.2",
     "@expo/metro-runtime": "~6.1.2",
+    "@react-native-community/datetimepicker": "^8.6.0",
     "@react-navigation/bottom-tabs": "^7.15.2",
     "@react-navigation/native": "^7.1.31",
     "@react-navigation/native-stack": "^7.14.2",
+    "@shopify/react-native-skia": "^2.4.21",
     "@supabase/supabase-js": "^2.98.0",
     "@tanstack/react-query": "^5.90.21",
     "axios": "^1.13.6",
     "date-fns": "^4.1.0",
     "expo": "~54.0.0",
+    "expo-blur": "^55.0.8",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
     "expo-linear-gradient": "~15.0.8",
@@ -47,6 +50,13 @@
     "@types/react": "~19.1.10",
     "babel-preset-expo": "~54.0.10",
     "typescript": "~5.9.2"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native-svg"
+      ]
+    }
   },
   "private": true
 }
